--- a/webrpi/templates/login.html
+++ b/webrpi/templates/login.html
@@ -1,32 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css') }}">
 
-{% extends "layout.html" %}
+    <title>Login - RPI</title>
 
-{% block title %}SO{% endblock %}
-
-{% block head %}
-    {{ super() }}
-    <style type="text/css">
-        .important { color: #336699; }
+    <style>
+        .container{
+            margin-top: 60px;
+        }
+        .important {
+            color: #336699;
+        }
     </style>
-{% endblock %}
-
-{% block container %}
-    <form method="post">
-        <div class="row">
-            <div class="columns">
-                <label for="exampleEmailInput">Username</label>
-                <input class="u-full-width" type="text" name="username" id="username">
+</head>
+<body>
+<div class="container">
+    <div class="container">
+        <form method="post">
+            <div class="row">
+                <div class="columns">
+                    <label for="exampleEmailInput">Username</label>
+                    <input class="u-full-width" type="text" name="username" id="username">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="columns">
-                <label for="exampleEmailInput">Password</label>
-                <input class="u-full-width" type="password" name="password" id="password">
+            <div class="row">
+                <div class="columns">
+                    <label for="exampleEmailInput">Password</label>
+                    <input class="u-full-width" type="password" name="password" id="password">
+                </div>
             </div>
-        </div>
-        {% if error %}
-            <pre>{{ error }}</pre><br>
-        {% endif %}
-        <input class="button-primary" type="submit" value="Submit">
-    </form>
-{% endblock %}
+            {% if error %}
+                <pre>{{ error }}</pre><br>
+            {% endif %}
+            <input class="button-primary" type="submit" value="Submit">
+        </form>
+    </div>
+</div>
+</body>
+</html>
