Melhorias layout Add botão no home Rota dos dispositivos Outros ajustes

--- a/webrpi/templates/index.html
+++ b/webrpi/templates/index.html
@@ -5,5 +5,20 @@
 
 {% block container %}
 
-    <h1>Go Home</h1>
+    <h4>House Command</h4>
+
+    <div class="container">
+        <div class="row">
+            <div class="four columns">
+                <a class="card" href="/dispositivos/portao1">Portão 1</a>
+            </div>
+            <div class="four columns">
+                <a class="card" href="/dispositivos/portao2">Portão 2</a>
+            </div>
+            <div class="four columns">
+                <a class="card" href="/dispositivos/garagem">Garagem</a>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
