--- a/webrpi/templates/layout.html
+++ b/webrpi/templates/layout.html
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="navbar-item navbar-right"><a class="navbar-link" href="/logout">logout</a></li>
+{#                <li class="navbar-item navbar-right"><a class="navbar-link" href="/logout">logout</a></li>#}
                 <li class="navbar-item navbar-right"><a class="navbar-link" href="/user">{{ session.username }}</a></li>
             </ul>
         </div>
