--- a/webrpi/static/css/custom.css
+++ b/webrpi/static/css/custom.css
@@ -194,3 +194,28 @@
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
+.card {
+    display: inline-block;
+    width: 100%;
+    height: 150px;
+    padding: 0 30px;
+    color: #555;
+    text-align: center;
+    font-weight: 600;
+    line-height: 150px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.card:hover{
+    color: #FFF;
+    background-color: #33C3F0;
+    border-color: #33C3F0;
+}
